third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/bug_10991.move:8:21
  │
8 │         assert!(foo(|x, _| x, |_, y| y, 10, 100) == 110, 0);
  │                     ^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/bug_10991.move:8:31
  │
8 │         assert!(foo(|x, _| x, |_, y| y, 10, 100) == 110, 0);
  │                               ^^^^^^^^
